--- a/index.html
+++ b/index.html
@@ -445,6 +445,11 @@
         </a>
       </li>
       <li>
+        <a id="modifyContributerInfoBtn" href="https://project-jste.github.io/docs/#/en-us/?id=command-studio" class="btn-floating orange" title="Help">
+          <i class="material-icons">help</i>
+        </a>
+      </li>
+      <li>
         <a id="modifyContributerInfoBtn" class="btn-floating orange" title="Modify Your Personal Info">
           <i class="material-icons">account_circle</i>
         </a>
