--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         </a>
       </li>
       <li>
-        <a id="modifyContributerInfoBtn" href="https://project-jste.github.io/docs/#/en-us/?id=command-studio" class="btn-floating orange" title="Help">
+        <a id="helpBtn" href="https://project-jste.github.io/docs/#/en-us/?id=command-studio" class="btn-floating green" title="Help">
           <i class="material-icons">help</i>
         </a>
       </li>
